--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -611,6 +611,7 @@ Shiny Screenshot and overlay button
     display: flex;
     flex-direction: column;
     min-height: 100vh; /* ensures hero + CTA fills viewport */
+    padding-top: 1rem;
 }
 
 /* ================================
